[project]
name = "BlurMP"
version = "0.1.0"
description = "Find and mask text in videos using Tesseract OCR and multiprocessing"
authors = [
    { name = "Pierre Vannier", email = "Pierre@flint.sh" }, 
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "opencv-python",
    "numpy",
    "loguru",
    "Pillow", # Potentially needed for image operations if helpers were expanded
    "rich",
    "pytesseract",
]

[project.scripts]
blurmp = "blurry_mp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --- Optional: Configuration for uv ---
# You usually don't need this section unless you have specific needs.
# [tool.uv.pip]
# extra-index-url = "..." 

[tool.setuptools]
# Automatically find top-level modules or packages
packages = {find = {}}

# Add other Ruff configurations here if desired 